crates/parser/tests/snapshots/surface_parser_test__block.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 11
            - 14
      body:
        Do:
          exprs:
            - Let:
                name: x
                value:
                  Lit:
                    value:
                      Int: 1
                    span:
                      - 25
                      - 26
                body: ~
                span:
                  - 17
                  - 26
            - Let:
                name: y
                value:
                  Lit:
                    value:
                      Int: 2
                    span:
                      - 36
                      - 37
                body: ~
                span:
                  - 28
                  - 37
            - BinaryOp:
                op: Add
                lhs:
                  Var:
                    name: x
                    span:
                      - 39
                      - 40
                rhs:
                  Var:
                    name: y
                    span:
                      - 43
                      - 44
                span:
                  - 39
                  - 44
          span:
            - 15
            - 46
      span:
        - 0
        - 46
