crates/parser/tests/snapshots/surface_parser_test__boolean_ops.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      params:
        - name: a
          ty:
            Named:
              name: Bool
              span:
                - 9
                - 13
          span:
            - 6
            - 13
        - name: b
          ty:
            Named:
              name: Bool
              span:
                - 18
                - 22
          span:
            - 15
            - 22
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 27
            - 31
      body:
        BinaryOp:
          op: Or
          lhs:
            BinaryOp:
              op: And
              lhs:
                Var:
                  name: a
                  span:
                    - 34
                    - 35
              rhs:
                Var:
                  name: b
                  span:
                    - 39
                    - 40
              span:
                - 34
                - 40
          rhs:
            UnaryOp:
              op: Not
              operand:
                Var:
                  name: a
                  span:
                    - 45
                    - 46
              span:
                - 44
                - 46
          span:
            - 34
            - 46
      span:
        - 0
        - 46
