crates/parser/tests/snapshots/surface_parser_test__extern_decl.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - ExternJava:
      class_name: java.lang.Math
      methods:
        - name: abs
          param_types:
            - Named:
                name: Int
                span:
                  - 39
                  - 42
          return_type:
            Named:
              name: Int
              span:
                - 47
                - 50
          span:
            - 31
            - 50
        - name: max
          param_types:
            - Named:
                name: Int
                span:
                  - 63
                  - 66
            - Named:
                name: Int
                span:
                  - 68
                  - 71
          return_type:
            Named:
              name: Int
              span:
                - 76
                - 79
          span:
            - 55
            - 79
      span:
        - 1
        - 81
