crates/parser/tests/snapshots/surface_parser_test__if_else.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      params:
        - name: x
          ty:
            Named:
              name: Int
              span:
                - 9
                - 12
          span:
            - 6
            - 12
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 17
            - 20
      body:
        If:
          cond:
            BinaryOp:
              op: Gt
              lhs:
                Var:
                  name: x
                  span:
                    - 26
                    - 27
              rhs:
                Lit:
                  value:
                    Int: 0
                  span:
                    - 30
                    - 31
              span:
                - 26
                - 31
          then_:
            Var:
              name: x
              span:
                - 32
                - 37
          else_:
            UnaryOp:
              op: Neg
              operand:
                Var:
                  name: x
                  span:
                    - 46
                    - 47
              span:
                - 43
                - 49
          span:
            - 23
            - 49
      span:
        - 0
        - 49
