crates/parser/tests/snapshots/surface_parser_test__import.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - Import:
      path: core/option
      names:
        - name: Option
          alias: ~
        - name: Some
          alias: ~
        - name: None
          alias: ~
      span:
        - 0
        - 39
