crates/parser/tests/snapshots/surface_parser_test__import_alias.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - Import:
      path: core/list
      names:
        - name: List
          alias: ~
        - name: map
          alias: listMap
      span:
        - 0
        - 39
