crates/parser/tests/snapshots/surface_parser_test__lambda.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: f
      visibility: Private
      params: []
      constraints: []
      return_type:
        Fn:
          params:
            - Named:
                name: Int
                span:
                  - 12
                  - 15
          ret:
            Named:
              name: Int
              span:
                - 20
                - 23
          span:
            - 11
            - 23
      body:
        Lambda:
          params:
            - name: x
              ty: ~
              span:
                - 26
                - 27
          return_type: ~
          body:
            BinaryOp:
              op: Add
              lhs:
                Var:
                  name: x
                  span:
                    - 31
                    - 32
              rhs:
                Lit:
                  value:
                    Int: 1
                  span:
                    - 35
                    - 36
              span:
                - 31
                - 36
          span:
            - 26
            - 36
      span:
        - 0
        - 36
